# avm-v12.0.0

./: .clang-format  .cmake-format.py  .dockerignore  .gitignore  .gitmodules  .mailmap  AUTHORS  CMakeLists.txt  LICENSE  README.md  Sample.cfg  docs.cmake  inter_qp235.sh  libs.doxy_template  mainpage.dox
.gitlab/: SanitizerIgnores.txt  UBSan.supp  ci_nightly.yml
ParaKit/: LICENSE  PATENTS  README.md  parameters.yaml  pyproject.toml  requirements.txt  run.py  run_unit_test.py  setup.sh  setup_decoder.sh
ParaKit/src/parakit/: __init__.py
ParaKit/src/parakit/config/: table.py  training.py  user.py
ParaKit/src/parakit/entropy/: codec_cdf_functions.py  codec_default_cdf.py  data_collector.py  file_collector.py  model.py  result_collector.py  trainer.py
ParaKit/src/parakit/tasks/: collect_results.py  decoding.py  generate_tables.py  training.py
ParaKit/unit_test/: parameters_unit_test.yaml
ParaKit/unit_test/bitstreams/: Bin_AVM-v8_File1.avm  Bin_AVM-v8_File2.avm
aom/: aom.h  aom_decoder.h  aom_frame_buffer.h  aom_integer.h  exports_com
aom_dsp/: aom_convolve.c  aom_dsp.cmake  aom_dsp_common.h  aom_dsp_rtcd.c  aom_dsp_rtcd_defs.pl  aom_filter.h  aom_simd.h  aom_simd_inline.h  avg.c  binary_codes_reader.c  binary_codes_reader.h  binary_codes_writer.c  binary_codes_writer.h  bitreader.c  bitreader.h  bitreader_buffer.c  bitreader_buffer.h  bitwriter.c  bitwriter.h  bitwriter_buffer.c  bitwriter_buffer.h  blend.h  blend_a64_hmask.c  blend_a64_mask.c  blend_a64_vmask.c  blk_sse_sum.c  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  fastssim.c  fft.c  fft_common.h  fwd_txfm.c  grain_table.h  intrapred.c  intrapred_common.h  loopfilter.c  (+28 more)
aom_mem/: aom_mem.c  aom_mem.cmake  aom_mem.h
aom_ports/: aom_once.h  aom_ports.cmake  aom_timer.h  arm.h  arm_cpudetect.c  bitops.h  emmintrin_compat.h  emms.asm  mem.h  mem_ops.h  mem_ops_aligned.h  msvc.h  ppc.h  ppc_cpudetect.c  sanitizer.h  system_state.h  x86.h  x86_abi_support.asm
aom_scale/: aom_scale.cmake  aom_scale.h  aom_scale_rtcd.c  aom_scale_rtcd.pl  yv12config.h
aom_util/: aom_thread.c  aom_thread.h  aom_util.cmake  debug_util.c  debug_util.h  endian_inl.h
apps/: aomenc.c  aomenc.h
av1/: av1.cmake  av1_cx_iface.c  av1_dx_iface.c
common/: args.c  args.h  args_helper.c  args_helper.h  ivfdec.c  ivfdec.h  ivfenc.c  ivfenc.h  lanczos_resample.c  lanczos_resample.h  md5_utils.c  obudec.c  obudec.h  rawenc.h  stream_iter.c  stream_iter.h  tf_lite_includes.h  tools_common.c  warnings.c  (+14 more)
tools/avm_analyzer/avm_analyzer_app/: Cargo.toml  index.html
tools/avm_analyzer/avm_analyzer_app/assets/: leo_qcif.ivf  leo_qcif.yuv  manifest.json  sw.js
tools/avm_analyzer/avm_analyzer_app/src/: app.rs  app_state.rs  lib.rs  main.rs  settings.rs
tools/avm_analyzer/avm_analyzer_app/src/image_manager/: color_maps.rs  mod.rs
tools/avm_analyzer/avm_analyzer_app/src/stream/: http_stream_manager.rs  local_stream_manager.rs  mod.rs  server_decode.rs
tools/avm_analyzer/avm_analyzer_app/src/views/: block_info_viewer.rs  coeffs_viewer.rs  controls_viewer.rs  decode_progress_viewer.rs  detailed_pixel_viewer.rs  drag_and_drop.rs  frame_info_viewer.rs  frame_select_viewer.rs  menu_bar.rs  mod.rs  performance_viewer.rs  render_view.rs  settings_viewer.rs  stream_select_viewer.rs  symbol_info_viewer.rs  view_mode.rs
tools/avm_analyzer/avm_analyzer_app/src/views/frame_viewer/: frame_overlay.rs  mod.rs  screen_bounds.rs  selected_object.rs
tools/avm_analyzer/avm_analyzer_app/src/views/stats_viewer/: mod.rs  pie_plot.rs
tools/avm_analyzer/avm_analyzer_server/: Cargo.toml
tools/avm_analyzer/avm_analyzer_server/src/: main.rs
tools/avm_analyzer/avm_stats/: Cargo.toml  build.rs
tools/avm_analyzer/avm_stats/src/: avm_proto.rs  coding_unit.rs  constants.rs  frame.rs  frame_error.rs  heatmap.rs  lib.rs  main.rs  partition.rs  pixels.rs  plane.rs  spatial.rs  stats.rs  superblock.rs  symbol.rs  transform_unit.rs
tools/py_stats/: .gitignore  README.md  pyproject.toml  requirements.txt
tools/py_stats/avm_stats/: extract_proto.py  frame_visualizations.py  proto_helpers.py  stats_aggregation.py  yuv_tools.py
tools/py_stats/examples/: frame_vis.ipynb
tools/py_stats/examples/extractors/: partition_type_extractor.py  prediction_mode_extractor.py  symbol_bits_extractor.py  tx_type_extractor.py
tools/py_stats/tests/: dump_yuvs_test.py  proto_helpers_test.py  yuv_tools_test.py
(+935 files in other folders)
