[package]
name = "avm-analyzer-app"
version = "0.1.0"
authors = ["Conor McCullough <comc@google.com>"]
edition = "2021"
rust-version = "1.75"


[dependencies]
avm-analyzer-common = { path = "../avm_analyzer_common" }
avm-stats = { path = "../avm_stats" }
anyhow = "1.0"
egui = "0.25"
egui_extras = { version = "0.25", features = ["image"] }
eframe = { version = "0.25", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "__screenshot",
] }
ehttp = "0.2.0"
egui_plot = "0.25"
egui_dock = "0.10"
image = { version = "0.24", features = ["jpeg", "png"] }
itertools = "0.10"
prost = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
poll-promise = "0.3.0"
y4m = "0.8.0"
web-sys = { version = "0.3.64", features = [
    "Blob",
    "FileReader",
    "Document",
    "Element",
    "History",
    "Performance",
    "HtmlElement",
    "UrlSearchParams",
    "Location",
    "Window",
    "Url",
    "UrlSearchParams",
] }
js-sys = { version = "0.3" }
futures = { version = "0.3.10", features = ["thread-pool"] }
rfd = { version = "0.12", features = ["file-handle-inner"] }
log = "0.4"
once_cell = "1.19.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
web-time = "1.0.0"
async-trait = "0.1.52"
ezsockets = { version = "0.6", default-features = false, features = [
    "wasm_client",
] }
url = "2.2.2"
wasm-bindgen = "0.2"
mime = { version = "0.3" }
mime_guess = { version = "2.0" }
rand = { version = "0.8.5" }
getrandom = { version = "0.2.10", features = ["js"] }
ordered-float = "4.2.0"
re_memory = "0.12.1"
bincode = "1.3"
base64 = "0.21.7"
weezl = "0.1.8"
convert_case = "0.6.0"

# web:
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4"
