[package]
name = "avm-analyzer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-fs = "2.1.0"
async-process = "2.0.1"
avm-analyzer-common = { path = "../avm_analyzer_common" }
avm-stats = { path = "../avm_stats" }
axum = { version = "0.7", features = ["multipart"]  }
clap = { version = "4.4.18", features = ["derive"] }
futures-lite = "2.2.0"
image = "0.24.8"
prost = { version = "0.11", features = ["prost-derive"]}
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "fs", "limit", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
