[package]
name = "avm-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
emath = "0.25.0"
prost = { version = "0.11", features = ["prost-derive"]}
prost-types = "0.11"
thiserror = "1.0"
itertools = "0.10"
clap = { version = "4.4.11", features = ["derive"] }
once_cell = "1.19.0"
log = "0.4"
ordered-float = "4.2.0"

[build-dependencies]
prost-build = "0.11"
